[feat] Freespec 형태 변경전 커밋