@@ -56,6 +56,13 @@ subprojects {
         }
     }
 
+    tasks.test {
+        // ...
+        jvmArgs(
+            "--add-opens",
+            "java.base/java.lang.reflect=ALL-UNNAMED",
+        )
+    }
     tasks.withType<Test> {
         useJUnitPlatform()
     }
@@ -80,6 +87,7 @@ project(":api") {
         testImplementation("io.kotest:kotest-runner-junit5:5.5.4")
         testImplementation("io.kotest:kotest-assertions-core:5.5.4")
         testImplementation("io.kotest.extensions:kotest-extensions-spring:1.1.2")
+        testImplementation("com.ninja-squad:springmockk:3.0.1")
         testImplementation("io.mockk:mockk:1.12.5")
         implementation("org.springframework.boot:spring-boot-starter-security")
         implementation("org.springframework.boot:spring-boot-starter-webflux")
@@ -108,6 +116,7 @@ project(":domain") {
         testImplementation("io.kotest:kotest-runner-junit5:5.5.4")
         testImplementation("io.kotest:kotest-assertions-core:5.5.4")
         testImplementation("io.kotest.extensions:kotest-extensions-spring:1.1.2")
+        testImplementation("com.ninja-squad:springmockk:3.0.1")
     }
     sourceSets["main"].withConvention(org.jetbrains.kotlin.gradle.plugin.KotlinSourceSet::class) {
         kotlin.srcDir("$buildDir/generated/source/kapt/main")
